--- a/package.json
+++ b/package.json
@@ -9,35 +9,34 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build env=prod"
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.2.6",
-    "@angular/compiler-cli": "^4.0.0",
     "@angular/animations": "^4.0.0",
+    "@angular/cli": "1.3.2",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.29",
     "angular2-flash-messages": "^1.0.8",
     "angulartics2": "^2.2.2",
     "body-parser": "^1.17.2",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-beta",
+    "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
     "express-jwt": "^5.3.0",
     "file-saver": "^1.3.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
     "jsonwebtoken": "^7.4.1",
     "moment": "^2.18.1",
     "mongoose": "^4.11.1",
@@ -49,11 +48,14 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
+    "popper.js": "^1.12.4",
     "request": "^2.81.0",
-    "typescript": "~2.3.3"
+    "rxjs": "^5.1.0",
+    "typescript": "~2.3.3",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.6",
+    "@angular/cli": "1.3.2",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "~2.5.53",
