--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.29",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.4",
     "angular2-flash-messages": "^1.0.8",
     "angulartics2": "^2.2.2",
     "body-parser": "^1.17.2",
@@ -42,6 +42,7 @@
     "mongoose": "^4.11.1",
     "mongoose-auto-increment": "^5.0.1",
     "ng2-nouislider": "^1.6.1",
+    "ngx-bootstrap": "^1.9.3",
     "nodemailer": "^4.0.1",
     "nodemailer-express-handlebars": "^2.0.0",
     "nouislider": "^10.0.0",
@@ -56,7 +57,7 @@
   },
   "devDependencies": {
     "@angular/cli": "1.3.2",
-    "@angular/compiler-cli": "^4.2.4",
+    "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
