--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/cli": "1.5.0-rc.0",
     "@angular/common": "^4.4.3",
     "@angular/compiler": "^4.4.3",
+    "@angular/compiler-cli": "^4.4.3",
     "@angular/core": "^4.4.3",
     "@angular/forms": "^4.4.3",
     "@angular/http": "^4.4.3",
