--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "angular2-jwt": "^0.2.3",
     "angulartics2": "^2.4.0",
     "body-parser": "^1.17.2",
-    "bootstrap": "^4.0.0-beta",
+    "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
