--- a/package.json
+++ b/package.json
@@ -14,24 +14,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
+    "@angular/cli": "1.7.4",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19",
-    "@angular/cli": "1.7.4",
-    "@angular/compiler-cli": "^4.4.3",
     "angular2-flash-messages": "^1.0.8",
     "angular2-jwt": "^0.2.3",
     "angulartics2": "^2.4.0",
     "body-parser": "^1.17.2",
     "bootstrap": "4.0.0-beta.2",
+    "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
@@ -43,16 +41,21 @@
     "mongoose": "^4.11.1",
     "mongoose-auto-increment": "^5.0.1",
     "ng2-nouislider": "^1.7.0",
-    "ngx-bootstrap": "^1.9.3",
+    "ngx-bootstrap": "^2.0.3",
     "nodemailer": "^4.0.1",
     "nodemailer-express-handlebars": "^2.0.0",
     "nouislider": "^10.0.0",
+    "npm": "^5.8.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "popper.js": "^1.12.5",
     "request": "^2.81.0",
-    "typescript": "~2.3.3"
+    "rxjs": "^5.5.6",
+    "typescript": "~2.5.3",
+    "webpack": "^3.11.0",
+    "webpack-cli": "^2.0.13",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.4",
@@ -72,6 +75,8 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "~2.5.3",
+    "webpack": "^3.11.0",
+    "webpack-cli": "^2.0.13"
   }
 }
