- Deleted unnecessary packages and files backend - Updated references

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
-    "@angular/cli": "1.7.4",
+    "@angular/cli": "~1.7.3",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/compiler-cli": "^5.2.0",
@@ -26,39 +26,29 @@
     "@angular/router": "^5.2.0",
     "angular2-flash-messages": "^1.0.8",
     "angular2-jwt": "^0.2.3",
+    "angular2-useful-swiper": "^5.0.1",
     "angulartics2": "^2.4.0",
     "body-parser": "^1.17.2",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
-    "express-handlebars": "^3.0.0",
-    "express-jwt": "^5.3.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
-    "jsonwebtoken": "^7.4.1",
-    "moment": "^2.18.1",
-    "mongoose": "^4.11.1",
-    "mongoose-auto-increment": "^5.0.1",
     "ng2-nouislider": "^1.7.0",
     "ngx-bootstrap": "^2.0.3",
-    "nodemailer": "^4.0.1",
-    "nodemailer-express-handlebars": "^2.0.0",
     "nouislider": "^10.0.0",
     "npm": "^5.8.0",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0",
     "popper.js": "^1.12.5",
-    "request": "^2.81.0",
     "rxjs": "^5.5.6",
+    "swiper": "^4.2.2",
     "typescript": "~2.5.3",
     "webpack": "^3.11.0",
     "webpack-cli": "^2.0.13",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.4",
+    "@angular/cli": "~1.7.3",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
