--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kvikkdugnad",
+  "name": "online-dugnad",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -8,65 +8,58 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --prod"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/cli": "~1.7.3",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
+    "@angular/animations": "~7.1.0",
+    "@angular/common": "~7.1.0",
+    "@angular/compiler": "~7.1.0",
+    "@angular/core": "~7.1.0",
+    "@angular/forms": "~7.1.0",
     "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
+    "@angular/platform-browser": "~7.1.0",
+    "@angular/platform-browser-dynamic": "~7.1.0",
+    "@angular/router": "~7.1.0",
     "angular2-flash-messages": "^1.0.8",
     "angular2-jwt": "^0.2.3",
-    "angular2-useful-swiper": "^5.0.1",
-    "angulartics2": "^2.4.0",
+    "angulartics2": "^2.5.0",
     "body-parser": "^1.17.2",
     "bootstrap": "4.0.0-beta.2",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.4",
     "dotenv": "^4.0.0",
-    "express": "^4.15.3",
+    "express": "^4.16.4",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1",
-    "ng2-nouislider": "^1.7.0",
-    "ngx-bootstrap": "^2.0.3",
-    "nouislider": "^10.0.0",
+    "ng2-nouislider": "^1.7.13",
+    "ngx-bootstrap": "^2.0.5",
+    "ngx-useful-swiper": "^0.3.1-beta",
+    "nouislider": "^10.1.0",
     "npm": "^5.8.0",
-    "popper.js": "^1.12.5",
-    "rxjs": "^5.5.6",
-    "swiper": "^4.2.2",
-    "typescript": "~2.5.3",
-    "webpack": "^3.11.0",
-    "webpack-cli": "^2.0.13",
-    "zone.js": "^0.8.19"
+    "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.3.3",
+    "swiper": "^4.4.6",
+    "tslib": "^1.9.0",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.3",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "~7.1.4",
+    "@angular/compiler-cli": "~7.1.0",
+    "@angular/language-service": "~7.1.0",
+    "@types/node": "~8.9.4",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3",
-    "webpack": "^3.11.0",
-    "webpack-cli": "^2.0.13"
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.1.6"
   }
 }
